# serde_generate_issue

./: .gitignore  Cargo.toml  Makefile  main.cpp
src/: lib.rs
