[package]
name = "cpp_bincode_issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "=1.3.3"
serde-reflection = "=0.3.6"
serde-generate = "=0.25.0"

[lib]
crate-type = ["staticlib", "lib"]
